deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment-test1
  labels:
    app: backend
  namespace: svanegas
spec:
  replicas: 3
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: nginx
        image: nginx:alpine
---
apiVersion: v1
kind: Service
metadata:
  name: my-service1
  labels:
    app: backend
  namespace: svanegas
spec:
  type: NodePort
  selector:
    app: backend
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 80
